--- a/.vuepress/public/admin/config.yml
+++ b/.vuepress/public/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: chamara8901/vuepresite
-  branch: main
+  branch: master
 media_folder: ".vuepress/public/"
 public_folder: "../../"
 display_url: https://stalwart-boba-e4b2e1.netlify.app
