--- a/.vuepress/public/admin/config.yml
+++ b/.vuepress/public/admin/config.yml
@@ -1,9 +1,9 @@
 backend:
-  name: github
-  repo: chamara8901/vuepresite
+  name: git-gateway
   branch: master
 media_folder: ".vuepress/public/"
 public_folder: "../../"
+display_url: https://stalwart-boba-e4b2e1.netlify.app
 collections:
   - name: "doc" # Used in routes, e.g., /admin/collections/blog
     label: "Doc" # Used in the UI
